--- a/style.css
+++ b/style.css
@@ -183,17 +183,18 @@
 }
 
 /*----Mouse click enlarge----*/
- /* Style the Image Used to Trigger the Modal */
- .myImg {
+/* Style the Image Used to Trigger the Modal */
+.myImg {
     border-radius: 5px;
     cursor: pointer;
     transition: 0.3s;
-  }
+}
   
-  .myImg:hover {opacity: 0.7;}
+.myImg:hover {opacity: 0.7;}
   
-  /* The Modal (background) */
-  .modal {
+/* The Modal (background) */
+.modal
+{
     display: none; /* Hidden by default */
     position: fixed; /* Stay in place */
     z-index: 1; /* Sit on top */
@@ -205,18 +206,23 @@
     overflow: auto; /* Enable scroll if needed */
     background-color: rgb(0,0,0); /* Fallback color */
     background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
-  }
-  
-  /* Modal Content (Image) */
-  .modal-content {
+}
+.repos-content-sub p
+{
+    padding: 0px;
+}
+/* Modal Content (Image) */
+.modal-content
+{
     margin: auto;
     display: block;
     width: 70%;
     max-width: 70%;
-  }
+}
   
-  /* Caption of Modal Image (Image Text) - Same Width as the Image */
-  #caption {
+/* Caption of Modal Image (Image Text) - Same Width as the Image */
+#caption
+{
     margin: auto;
     display: block;
     width: 80%;
@@ -225,21 +231,24 @@
     color: #ccc;
     padding: 10px 0;
     height: 150px;
-  }
+}
   
-  /* Add Animation - Zoom in the Modal */
-  .modal-content, #caption {
+/* Add Animation - Zoom in the Modal */
+.modal-content, #caption
+{
     animation-name: zoom;
     animation-duration: 0.6s;
-  }
+}
   
-  @keyframes zoom {
+@keyframes zoom
+{
     from {transform:scale(0)}
     to {transform:scale(1)}
-  }
+}
   
   /* The Close Button */
-  .close {
+.modalClose
+{
     position: absolute;
     top: 15px;
     right: 35px;
@@ -247,19 +256,21 @@
     font-size: 40px;
     font-weight: bold;
     transition: 0.3s;
-  }
-  
-  .close:hover,
-  .close:focus {
+}
+.modalClose:hover,
+.modalClose:focus
+{
     color: #bbb;
     text-decoration: none;
     cursor: pointer;
-  }
+}
   
   /* 100% Image Width on Smaller Screens */
-  @media only screen and (max-width: 700px){
-    .modal-content {
-      width: 100%;
+@media only screen and (max-width: 700px)
+{
+    .modal-content
+    {
+        width: 100%;
     }
-  } 
+} 
 /*----end image click enlarge----*/
